<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_transaction"
        android:title="@string/menu_transaction"
        android:icon="@drawable/ic_transaction"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_wallet"
        android:title="@string/menu_wallet"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home_black_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_notification"
        android:title="Notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/personalProfileFragment"
        android:title="Profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        app:showAsAction="always"/>

</menu>